Fixing mobile view bug on portfolio page causing image to stretch vertically.

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -1,7 +1,3 @@
-.height-cap {
-  max-height: 100%;
-}
-
 .tmpl-hireme label {
   font-size: 0.8rem;
 }
